@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+
+Fix indentation and comments, cosmetic changes only.
+ server/pets.c:
+Ryo 2006-11-26
+
 Fix bug #1599307:
 server/shop.c: In pay_from_container() handle non-standard MONEY objects when
    buying items.
